# Butler

./: .gitignore  .gitmodules  Motor Controller and CAN  README.md  generate_docs.sh
butler/: CMakeLists.txt  package.xml
butler/launch/: main.launch  object_detector.launch
butler/src/: object_detector.cpp
butler5/: CMakeLists.txt  model.config  package.xml
butler5/config/: joint_names_butler5.yaml
butler5/launch/: display.launch  gazebo.launch
butler5/meshes/: arm_base.STL  arm_first.STL  arm_second.STL  base_link.STL  base_link_old.STL  left_wheel.STL  right_wheel.STL  tower.STL
butler5/urdf/: butler5.gv  butler5.urdf.xacro  butler51.urdf.xacro  butler52.urdf  swivel_wheel.urdf.xacro  wheel.urdf.xacro  wrapper.xml
butler_control/: package.xml
butler_control/launch/: butler_hardware.launch  butler_visualize.launch
butler_control/src/: butler_hw_interface.cpp  butler_hw_main.cpp
butler_robot/: CMakeLists.txt  package.xml
calc_ik/: CMakeLists.txt  package.xml
darknet_ros/: .gitignore
report/: abstract.tex  acknowledgements.tex  main.tex  read_me.tex  references.bib  title.tex
ros_control_boilerplate/: CMakeLists.txt
ros_control_boilerplate/butler_control/: CMakeLists.txt
ros_control_boilerplate/butler_control/config/: butler_controllers.yaml
ros_control_boilerplate/butler_control/include/butler_control/: butler_hw_interface.h
ros_control_boilerplate/butler_control/launch/: butler_simulation.launch  butler_test_trajectory.launch
ros_control_boilerplate/butler_control/src/: butler_hw_interface (copy).cpp  butler_hw_interface.cpp
(+107 files in other folders)
